--- a/views/login.ejs
+++ b/views/login.ejs
@@ -48,5 +48,9 @@
             <li><a href="/auth/login">login</a></li>
         </ul>
     </nav>
+
+    <main>
+        <a class="google-btn" href="/auth/google">Google+</a>
+    </main>
 </body>
 </html>
